test/Fail/Issue512.err
Issue512.agda:13.23-27: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue512.agda:13.23-27
